Sat Jul  1 17:47:08 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* ser-unix.c (do_unix_readchar): Revert Tue Mar 28 18:19:50 2000
 	Andrew Cagney <cagney@b1.cygnus.com>.  Locks up when no data is
 	pending.

Sat Jul  1 15:40:14 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (SER_HARDWIRE): Restore code to set it by configure.

2000-06-26  Kevin Buettner  <kevinb@redhat.com>

	* copying.awk: Eliminate use of PARAMS from this file.

Fri Jun 23 20:47:03 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c (mips_push_arguments): Use the variable stack_used_p
 	to determine if any arguments were written to the stack.  Do not
 	rely on NUMARG>=8.

Mon Jun 19 11:29:35 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* command.h (add_set_auto_boolean_cmd): Add declaration.
	(enum var_types): Add var_auto_boolean.

	* command.c (add_set_auto_boolean_cmd): New function.
	(do_setshow_command): Recognize auto_boolean.
	(parse_binary_operation): Recognize enable and disable.
	(parse_auto_binary_operation): Parse auto binary variables.

	* TODO: Update

Fri Jun 23 16:20:21 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c (fp_register_arg_p): New function.
	(mips_push_arguments): Use.  Do not pass floating point arguments
 	on in an integer register.

2000-06-21  Pierre Muller  <muller@ics.u-strasbg.fr>
	* symfile.c (init_filename_language_table): add ".pas", ".p" and ".pp"
	as pascal source file extensions.

2000-06-19  J.T. Conklin  <jtc@redback.com>

	* remote-nindy.c (nindy_fetch_word, nindy_store_word): Removed
	(nindy_xfer_inferior_memory): Use dcache_xfer_memory() instead of
 	breaking transfer into chunks and using nindy_fetch_word() and
	nindy_store_word().

	* remote-bug.c (bug_xfer_memory): Use dcache_xfer_memory() instead
 	of breaking transfer into chunks and using gr_fetch_word() and
 	gr_store_word().

	* remote.c (remote_fetch_word, remote_store_word): Removed.

	* remote-utils.h (gr_fetch_word, gr_store_word): Removed.